# shelter-bak/src/controllers/ds.js
@@ -74,6 +74,66 @@ module.exports = {
             log.error(err);
             writeResponseError(res, err, req);
         }
+    },
+    /**
+     * Get data
+     * Returns: ds data array
+     */
+    async getDsData(req, res) {
+        try {
+            const ds = req.swagger.params.ds.value;
+            log.debug('controller getDsData', ds);
+            const result = await dsDb.getDsData(ds);
+            writeResponse(res, result, req);
+        } catch (err) {
+            log.error(err);
+            writeResponseError(res, err, req);
+        }
+    },
+    /**
+     * add data
+     * Returns: Resulted id
+     */
+    async addDsData(req, res) {
+        try {
+            const ds = req.swagger.params.ds.value;
+            log.debug('controller addDsData', ds);
+            const id = await dsDb.addDsData(ds);
+            writeResponse(res, {id}, req);
+        } catch (err) {
+            log.error(err);
+            writeResponseError(res, err, req);
+        }
+    },
+    /**
+     * update data
+     * Returns: Resulted id
+     */
+    async updateDsData(req, res) {
+        try {
+            const ds = req.swagger.params.ds.value;
+            log.debug('controller addDs', ds.ds, ds.old);
+            const id = await dsDb.updateDsData(ds.ds, ds.old);
+            writeResponse(res, {id}, req);
+        } catch (err) {
+            log.error(err);
+            writeResponseError(res, err, req);
+        }
+    },
+    /**
+     * delete data
+     * Returns: Resulted id
+     */
+    async deleteDsData(req, res) {
+        try {
+            const ds = req.swagger.params.ds.value;
+            log.debug('controller deleteField', ds);
+            const id = await dsDb.deleteDsData(ds);
+            writeResponse(res, {id}, req);
+        } catch (err) {
+            log.error(err);
+            writeResponseError(res, err, req);
+        }
     }
 
 };
